--- a/Copernicus.Models.CRM/Copernicus.Models.CRM.csproj
+++ b/Copernicus.Models.CRM/Copernicus.Models.CRM.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0E9A991D-68CD-4D12-AA4B-E098BCD5A25A}</ProjectGuid>
+    <ProjectGuid>{CD847F4E-DB39-4A2A-AB4F-84F9F5D4F3D4}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Copernicus.Models.Tests</RootNamespace>
-    <AssemblyName>Copernicus.Models.Tests</AssemblyName>
+    <RootNamespace>Copernicus.Models.CRM</RootNamespace>
+    <AssemblyName>Copernicus.Models.CRM</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
@@ -32,9 +32,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.AspNet.Identity.Core">
-      <HintPath>..\packages\Microsoft.AspNet.Identity.Core.2.0.0\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
@@ -99,23 +96,21 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="Utilities, Version=4.0.0.0, Culture=neutral, PublicKeyToken=0f7489d08ad0bf67, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="Utilities">
       <HintPath>..\packages\CraigsUtilityLibrary.4.0.136-beta\lib\net40\Utilities.dll</HintPath>
-    </Reference>
-    <Reference Include="xunit">
-      <HintPath>..\packages\xunit.1.9.2\lib\net20\xunit.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Authentication\Stores\UserStore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Copernicus.Models.Content\Copernicus.Models.Content.csproj">
+      <Project>{0932b0b5-0b10-454c-bb68-4249fc439d2a}</Project>
+      <Name>Copernicus.Models.Content</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Copernicus.Models\Copernicus.Models.csproj">
       <Project>{451a3def-9f69-422a-aeab-1a703d10894f}</Project>
       <Name>Copernicus.Models</Name>
