--- a/Copernicus/Web.config
+++ b/Copernicus/Web.config
@@ -9,8 +9,8 @@
             <section name="errorMail" requirePermission="false" type="Elmah.ErrorMailSectionHandler, Elmah" />
             <section name="errorFilter" requirePermission="false" type="Elmah.ErrorFilterSectionHandler, Elmah" />
         </sectionGroup>
-        <section name="glimpse" type="Glimpse.Core.Configuration.Section, Glimpse.Core" />
-    </configSections>
+        
+    <section name="glimpse" type="Glimpse.Core.Configuration.Section, Glimpse.Core" /></configSections>
 
     <connectionStrings>
         <add name="Default" connectionString="Data Source=localhost;Initial Catalog=Copernicus;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
@@ -57,18 +57,19 @@
 
         <httpHandlers>
             <add path="*.less" verb="GET" type="dotless.Core.LessCssHttpHandler, dotless.Core" />
-            <add path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" />
-        </httpHandlers>
+            
+        <add path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" /></httpHandlers>
         <!-- Glimpse: This can be commented in to add additional data to the Trace tab when using WebForms
         <trace writeToDiagnosticsTrace="true" enabled="true" pageOutput="false" /> -->
         <!-- Glimpse: This can be commented in to add additional data to the Trace tab when using WebForms
         <trace writeToDiagnosticsTrace="true" enabled="true" pageOutput="false" /> -->
-        <httpModules>
+        <!-- Glimpse: This can be commented in to add additional data to the Trace tab when using WebForms
+        <trace writeToDiagnosticsTrace="true" enabled="true" pageOutput="false"/> --><httpModules>
             <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" />
             <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" />
             <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" />
-            <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" />
-        </httpModules>
+            
+        <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" /></httpModules>
     </system.web>
 
     <runtime>
@@ -125,6 +126,10 @@
                 <assemblyIdentity name="Microsoft.Web.XmlTransform" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
                 <bindingRedirect oldVersion="0.0.0.0-1.2.0.0" newVersion="1.2.0.0" />
             </dependentAssembly>
+            <dependentAssembly>
+                <assemblyIdentity name="MiniProfiler" publicKeyToken="b44f9351044011a3" culture="neutral" />
+                <bindingRedirect oldVersion="0.0.0.0-3.0.10.0" newVersion="3.0.10.0" />
+            </dependentAssembly>
         </assemblyBinding>
     </runtime>
 
@@ -132,15 +137,15 @@
     <system.webServer>
         <handlers>
             <add name="dotless" path="*.less" verb="GET" type="dotless.Core.LessCssHttpHandler,dotless.Core" resourceType="File" preCondition="" />
-            <add name="Glimpse" path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" preCondition="integratedMode" />
-        </handlers>
+            
+        <add name="Glimpse" path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" preCondition="integratedMode" /></handlers>
         <validation validateIntegratedModeConfiguration="false" />
         <modules>
             <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" preCondition="managedHandler" />
             <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" preCondition="managedHandler" />
             <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" preCondition="managedHandler" />
-            <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" preCondition="integratedMode" />
-        </modules>
+            
+        <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" preCondition="integratedMode" /></modules>
     </system.webServer>
 
     <elmah>
@@ -148,10 +153,10 @@
         <security allowRemoteAccess="no" />
         <errorMail from="system@yourdomain.com" to="admin@yourdomain.com" subject="Application Error" async="true" smtpPort="25" smtpServer="smtpserver.yourdomain.com" />
     </elmah>
-    <glimpse defaultRuntimePolicy="On" endpointBaseUri="~/Glimpse.axd">
-        <!-- 
+    
+<glimpse defaultRuntimePolicy="On" endpointBaseUri="~/Glimpse.axd">
+      <!-- 
           For more information on how to configure Glimpse, please visit http://getglimpse.com/Help/Configuration
           or access {your site}/Glimpse.axd for even more details and a Configuration Tool to support you. 
       -->
-    </glimpse>
-</configuration>
+    </glimpse></configuration>
