--- a/Copernicus.Models.CRM/Copernicus.Models.CRM.csproj
+++ b/Copernicus.Models.CRM/Copernicus.Models.CRM.csproj
@@ -101,7 +101,19 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Address.cs" />
+    <Compile Include="Company.cs" />
+    <Compile Include="ContactInfo.cs" />
+    <Compile Include="Country.cs" />
+    <Compile Include="Education.cs" />
+    <Compile Include="ImportantDate.cs" />
+    <Compile Include="Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Relationship.cs" />
+    <Compile Include="School.cs" />
+    <Compile Include="Skill.cs" />
+    <Compile Include="State.cs" />
+    <Compile Include="WorkExperience.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -115,6 +127,9 @@
       <Project>{451a3def-9f69-422a-aeab-1a703d10894f}</Project>
       <Name>Copernicus.Models</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Mappings\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
