--- a/Copernicus.Core/packages.config
+++ b/Copernicus.Core/packages.config
@@ -1,14 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
-  <package id="CraigsUtilityLibrary" version="4.0.157-beta" targetFramework="net45" />
-  <package id="Ironman.Core" version="1.0.157-beta" targetFramework="net45" />
+  <package id="CraigsUtilityLibrary" version="4.0.165-beta" targetFramework="net45" />
+  <package id="Ironman.Core" version="1.0.165-beta" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.0.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.0.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.1.2" targetFramework="net45" />
+  <package id="Microsoft.Bcl.Immutable" version="1.1.20-beta" targetFramework="net45" />
+  <package id="Microsoft.Bcl.Metadata" version="1.0.11-alpha" targetFramework="net45" />
+  <package id="Microsoft.CodeAnalysis.Common" version="0.7.4052301-beta" targetFramework="net45" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="0.7.4052301-beta" targetFramework="net45" />
   <package id="Microsoft.Owin" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.Cookies" version="2.1.0" targetFramework="net45" />
@@ -18,13 +22,6 @@
   <package id="Newtonsoft.Json" version="6.0.3" targetFramework="net45" />
   <package id="NuGet.Core" version="2.8.2" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
-  <package id="Roslyn" version="1.2.20906.2" targetFramework="net45" />
-  <package id="Roslyn.Compilers.Common" version="1.2.20906.2" targetFramework="net45" />
-  <package id="Roslyn.Compilers.CSharp" version="1.2.20906.2" targetFramework="net45" />
-  <package id="Roslyn.Compilers.VisualBasic" version="1.2.20906.2" targetFramework="net45" />
-  <package id="Roslyn.Services.Common" version="1.2.20906.2" targetFramework="net45" />
-  <package id="Roslyn.Services.CSharp" version="1.2.20906.2" targetFramework="net45" />
-  <package id="Roslyn.Services.VisualBasic" version="1.2.20906.2" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.0.5" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
