--- a/Copernicus/packages.config
+++ b/Copernicus/packages.config
@@ -1,26 +1,30 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
-  <package id="CraigsUtilityLibrary" version="4.0.157-beta" targetFramework="net45" />
-  <package id="CUL.MiniProfiler" version="4.0.157-beta" targetFramework="net45" />
-  <package id="CUL.NLog" version="4.0.157-beta" targetFramework="net45" />
-  <package id="CUL.ServiceStack" version="4.0.157-beta" targetFramework="net45" />
+  <package id="Bender" version="3.0.1.0" targetFramework="net45" />
+  <package id="CraigsUtilityLibrary" version="4.0.165-beta" targetFramework="net45" />
+  <package id="CUL.Bender" version="4.0.165-beta" targetFramework="net45" />
+  <package id="CUL.fastJSON" version="4.0.165-beta" targetFramework="net45" />
+  <package id="CUL.MiniProfiler" version="4.0.165-beta" targetFramework="net45" />
+  <package id="CUL.NLog" version="4.0.165-beta" targetFramework="net45" />
   <package id="dotless" version="1.4.0.0" targetFramework="net45" />
   <package id="EcmaScript.Net" version="1.0.1.0" targetFramework="net45" />
   <package id="elmah.corelibrary" version="1.2.2" targetFramework="net45" />
   <package id="Elmah.MVC" version="2.1.1" targetFramework="net45" />
+  <package id="fastJSON" version="2.1.1.0" targetFramework="net45" />
+  <package id="flexo" version="1.0.0.18" targetFramework="net45" />
   <package id="Glimpse" version="1.8.5" targetFramework="net45" />
   <package id="Glimpse.Ado" version="1.7.1" targetFramework="net45" />
   <package id="Glimpse.AspNet" version="1.9.0" targetFramework="net45" />
-  <package id="Glimpse.CUL" version="4.0.157-beta" targetFramework="net45" />
+  <package id="Glimpse.CUL" version="4.0.165-beta" targetFramework="net45" />
   <package id="Glimpse.Elmah" version="1.1.1" targetFramework="net45" />
   <package id="Glimpse.MiniProfiler" version="1.2.4" targetFramework="net45" />
   <package id="Glimpse.Mvc5" version="1.5.3" targetFramework="net45" />
   <package id="Glimpse.NLog" version="1.3.0" targetFramework="net45" />
-  <package id="Ironman.Core" version="1.0.157-beta" targetFramework="net45" />
-  <package id="Ironman.Core.Assets.Less" version="1.0.157-beta" targetFramework="net45" />
-  <package id="Ironman.Core.Assets.Yui" version="1.0.157-beta" targetFramework="net45" />
-  <package id="Ironman.Default" version="1.0.157-beta" targetFramework="net45" />
+  <package id="Ironman.Core" version="1.0.165-beta" targetFramework="net45" />
+  <package id="Ironman.Core.Assets.Less" version="1.0.165-beta" targetFramework="net45" />
+  <package id="Ironman.Core.Assets.Yui" version="1.0.165-beta" targetFramework="net45" />
+  <package id="Ironman.Default" version="1.0.165-beta" targetFramework="net45" />
   <package id="jQuery" version="2.1.1" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.12.0" targetFramework="net45" />
   <package id="Knockout.Validation" version="1.0.1" targetFramework="net45" />
@@ -31,6 +35,10 @@
   <package id="Microsoft.AspNet.Razor" version="3.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.1.2" targetFramework="net45" />
+  <package id="Microsoft.Bcl.Immutable" version="1.1.20-beta" targetFramework="net45" />
+  <package id="Microsoft.Bcl.Metadata" version="1.0.11-alpha" targetFramework="net45" />
+  <package id="Microsoft.CodeAnalysis.Common" version="0.7.4052301-beta" targetFramework="net45" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="0.7.4052301-beta" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.1.2" targetFramework="net45" />
   <package id="Microsoft.Owin" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="2.1.0" targetFramework="net45" />
@@ -42,20 +50,12 @@
   <package id="Microsoft.Owin.Security.OAuth" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.Twitter" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
-  <package id="MiniProfiler" version="3.0.10" targetFramework="net45" />
+  <package id="MiniProfiler" version="3.0.11" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.3" targetFramework="net45" />
-  <package id="NLog" version="2.1.0" targetFramework="net45" />
+  <package id="NLog" version="3.0.0.0" targetFramework="net45" />
   <package id="NLog.Config" version="2.1.0" targetFramework="net45" />
   <package id="NLog.Schema" version="2.1.0" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
-  <package id="Roslyn" version="1.2.20906.2" targetFramework="net45" />
-  <package id="Roslyn.Compilers.Common" version="1.2.20906.2" targetFramework="net45" />
-  <package id="Roslyn.Compilers.CSharp" version="1.2.20906.2" targetFramework="net45" />
-  <package id="Roslyn.Compilers.VisualBasic" version="1.2.20906.2" targetFramework="net45" />
-  <package id="Roslyn.Services.Common" version="1.2.20906.2" targetFramework="net45" />
-  <package id="Roslyn.Services.CSharp" version="1.2.20906.2" targetFramework="net45" />
-  <package id="Roslyn.Services.VisualBasic" version="1.2.20906.2" targetFramework="net45" />
-  <package id="ServiceStack.Text.Signed" version="4.0.20" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.0.5" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
   <package id="YUICompressor.NET" version="2.4.0.0" targetFramework="net45" />
